bootstrap/02-policy-as-code/kyverno-policy/test-image-signature-fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-fail
  namespace: team-policy
  labels:
    costcenter: "cc-42"
spec:
  containers:
    - name: unsigned-nginx
      image: ghcr.io/zahlenhelfer/docker-ghcr-ghaction-nginx:latest
