bootstrap/02-policy-as-code/kyverno-policy/test-image-signature-pass.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pass
  namespace: team-policy
  labels:
    costcenter: "cc-42"
spec:
  containers:
    - name: test
      image: ghcr.io/zahlenhelfer/teams-api:1.1.7
